bugfix: unit tests does not run with maven